--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,13 +51,13 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
-    "lint-staged": "^15.5.1",
+    "lint-staged": "^16.1.0",
     "prettier": "^3.5.3",
     "ts-unused-exports": "^11.0.1",
-    "typescript": "~5.7.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.26.1",
     "unimported": "^1.31.0",
     "vite": "^6.3.5",
-    "vitest": "^1.6.0"
+    "vitest": "^3.1.4"
   }
 }
