--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "db:restore": "node database/tools/restore.js",
     "db:monitor": "node database/tools/monitor.js",
     "db:migrate": "node database/tools/run-migration.js",
-    "lint:js": "eslint src/ && (cd frontend && npm run lint)",
+    "lint:js": "npx eslint src/ && (cd frontend && npm run lint)",
     "lint:css": "stylelint frontend/src/**/*.css",
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:fix": "eslint src/ --fix && (cd frontend && npm run lint -- --fix)",
+    "lint:fix": "npx eslint src/ --fix && (cd frontend && npm run lint -- --fix)",
     "audit:code": "node scripts/code-audit.js",
     "audit:database": "node scripts/database-cleanup-analysis.js",
     "audit:full": "npm run audit:code && npm run audit:database",
@@ -44,29 +44,29 @@
     "@aws-sdk/client-s3": "^3.682.0",
     "@aws-sdk/s3-request-presigner": "^3.682.0",
     "@dr.pogodin/csurf": "^1.15.0",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "conekta": "^6.0.3",
-    "connect-pg-simple": "^8.0.0",
+    "connect-pg-simple": "^10.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "dotenv-flow": "^3.3.0",
+    "dotenv-flow": "^4.1.0",
     "express": "^4.21.2",
-    "express-http-context": "^1.2.5",
-    "express-rate-limit": "^6.11.2",
+    "express-http-context": "^2.0.1",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
-    "helmet": "^6.2.0",
+    "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
     "multer": "^1.4.5-lts.2",
-    "node-cron": "^3.0.3",
-    "node-pg-migrate": "^7.9.1",
-    "nodemailer": "^6.10.1",
+    "node-cron": "^4.0.7",
+    "node-pg-migrate": "^8.0.0",
+    "nodemailer": "^7.0.3",
     "pg": "^8.15.6",
-    "prom-client": "^14.2.0",
+    "prom-client": "^15.1.3",
     "redis": "^5.1.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.3",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -75,16 +75,16 @@
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
     "depcheck": "^1.4.7",
-    "eslint": "^8.57.1",
-    "husky": "^8.0.3",
+    "eslint": "^9.27.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "lint-staged": "^15.5.2",
+    "lint-staged": "^16.1.0",
     "memorystore": "^1.6.7",
     "nodemon": "^3.1.10",
     "puppeteer": "^24.8.1",
     "stylelint": "^16.19.1",
     "stylelint-config-standard": "^38.0.0",
-    "supertest": "^6.3.4"
+    "supertest": "^7.1.1"
   },
   "engines": {
     "node": ">=18.12.0"
