--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
-    "multer": "^1.4.5-lts.2",
+    "multer": "^2.0.0",
     "node-cron": "^4.0.7",
     "node-pg-migrate": "^8.0.0",
     "nodemailer": "^7.0.3",
